# fuxian2018

./: README.md
mccarthy2018_reproduction/: README.md  config.yaml  environment.yml  pyproject.toml
mccarthy2018_reproduction/data/: figure_index.csv
mccarthy2018_reproduction/docs/: algorithm_extraction_notes.md  artifact_manifest.md  chapter3_integrated_breakthrough_results.md  chapter3_integrated_breakthrough_strategy.md  chapter3_quasi_dro_validation.md  chapter3_route_b_artifact_index.md  chapter3_route_b_branch_consistency.md  chapter3_route_b_bvp_palc_neighborhood.md  chapter3_route_b_bvp_residual_prototype.md  chapter3_route_b_bvp_stabilization.md  chapter3_route_b_fixed_time_constrained_palc.md  chapter3_route_b_free_time_experiment.md  chapter3_route_b_palc_safeguard_sweep.md  chapter3_route_b_parameter_aware_palc.md  chapter3_route_b_refinement.md  chapter3_route_b_stage_summary.md  chapter4_manifold_validation.md  external_reproduction_resources.md  fig_3_10_q8_failure_analysis.md  fig_3_10_validation.md  figure_consistency_review.md  mccarthy2018_reading_notes.md  next_reproduction_roadmap.md  project_index.md  python_reproduction_plan.md  reproduction_assumptions.md  reproduction_target_table.md  resource_links.md  route_b_formulation_note.md  stage_report_reproduction_status.md
mccarthy2018_reproduction/figures/: _chapter4_plotting.py  _chapter5_plotting.py  _figure_paths.py  _torus_schematic.py  fig_2_01.py  fig_2_02.py  fig_2_03.py  fig_2_04.py  fig_2_05.py  fig_2_06.py  fig_2_07.py  fig_2_08.py  fig_2_09.py  fig_2_10.py  fig_2_11.py  fig_2_12.py  (+42 more)
(+164 files in other folders)
